--- a/front/src/styles/global.scss
+++ b/front/src/styles/global.scss
@@ -4,10 +4,11 @@ html {
 
 body {
     background-color: rgb(var(--v-theme-background));
+    font-family: 'sans-serif';
 }
 
 .with-background {
-    background-image: url(../../public/background.png);
+    background-image: url(../../background.png);
     background-position: center;
     background-size: cover;
 }
@@ -17,7 +18,6 @@ body {
 }
 
 a {
-    font-family: 'Roboto';
     text-decoration: none;
     color: #0066CC;
 
@@ -33,4 +33,9 @@ a {
 
 .full-height {
     height: 100vh;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: xxx-large;
 }
