ajout de la liste de carte

--- a/front/src/views/restaurant/RestaurantList.scss
+++ b/front/src/views/restaurant/RestaurantList.scss
@@ -12,6 +12,7 @@
 
 .cartes-header {
   text-align: center;
+  width: 40vw;
 }
 
 .empty-card {
@@ -57,7 +58,7 @@
 
 .card-image {
   position: relative;
-  height: 19vh;
+  height: 50%;
   background-size: cover;
   background-position: center;
 }
